    directory for this is now ``~/.lastfmsubmitd``, which contains at least
    ``conf`` and ``spool`` (the latter will be created if it does not
    exist). I would ordinarily be loath to change this in a "stable"
    release, but it didn't really work at all before because there was not a
    defined standard for the spool. Thanks also to Nick Welch for pointing
    this out.

1.0.1 (2008-09-24)
==================

  * Split everything besides the daemon and example client into its
    own package (ears). Unrelated players can now depend on us, and
    distributions can package us, without dragging in things they may not
    want (MusicBrainz, cdparanoia).

  * Moved lastmp to a "contrib" subdirectory to emphasize the fact that
    this package is not just for MPD; only the 250 lines of our flagship
    example are.

  * Fixed a possible crash when lastfmsubmitd is fed malformed YAML.

0.37 (2008-01-07)
=================

  * Close file descriptors, etc, when daemonizing.

  * Add missing import in client.py.

0.36 (2007-10-27)
=================

  * Client interface has totally changed (see README.plugins). All problems
    regarding spool path etc. not being honored should be fixed.

  * Write pidfile even if --no-daemon, so we don't crash. Unnecessary, but
    easier for now.

  * Read sleep time correctly in config.

  * Fix sox error in peel -c.

  * Fix peelrc [options] section parsing.

  * Add --encoder option in peel.

0.35 (2007-03-29)
=================

  * Fix crash when a buggy MPD reports the length of a track as zero.

0.34 (2007-03-26)
=================

  * Sort submissions by time if several spool files are read in one go, to
    avoid erroneously triggering the spam filter (thanks to Steve Hill and
    a cast of thousands).

  * Suppress extra warnings if lastmp cannot connect to MPD.

  * Fixed creation of Unicode filenames, songs with slashes, and -d option
    parsing in peel. Also, actually install it.

0.33 (2006-07-31)
=================
